--- a/TramUrWay.Android/Resources/layout/RouteActivity.xml
+++ b/TramUrWay.Android/Resources/layout/RouteActivity.xml
@@ -168,7 +168,7 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="4dp"
-                    android:background="@drawable/shadow-inv"
+                    android:background="@drawable/shadow_inv"
                     android:layout_alignBottom="@id/RouteActivity_Map" />
 
             <!--</android.support.v4.widget.SwipeRefreshLayout>-->
