--- a/TramUrWay.Android/Resources/layout/RouteAutocompleteItem.xml
+++ b/TramUrWay.Android/Resources/layout/RouteAutocompleteItem.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="40dp"
-    android:background="@color/background_material_light"
-    android:textColor="@color/primary_text_default_material_light"
-    android:gravity="center_vertical"
-    android:paddingLeft="8dp" />
+    android:layout_height="wrap_content">
+
+    <TextView
+        android:id="@+id/TextView"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="@color/background_material_light"
+        android:textColor="@color/primary_text_default_material_light"
+        android:gravity="center_vertical"
+        android:paddingLeft="8dp" />
+    
+</LinearLayout>
