Optimized maps loading time. Small bug fix.

--- a/TramUrWay.Android/Resources/layout/LineMapFragment.xml
+++ b/TramUrWay.Android/Resources/layout/LineMapFragment.xml
@@ -2,13 +2,18 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:map="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <FrameLayout
+    <fragment
         android:id="@+id/MapFragment_Map"
+        class="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        map:cameraTargetLat="43.608340"
+        map:cameraTargetLng="3.877086"
+        map:cameraZoom="12" />
 
 </LinearLayout>
